--- a/src/components/Sass/_contact.scss
+++ b/src/components/Sass/_contact.scss
@@ -1,36 +1,50 @@
 .contact {
 	background-color: white;
 	display: flex;
+	justify-content: space-around;
+	align-items: center;
 
 	@include mobile {
 		flex-direction: column;
 		align-items: center;
+		justify-content: center;
 	}
 
 	.left {
-		flex: 1;
 		overflow: hidden;
+		display: flex;
+		width: 55%;
+
 		img {
 			height: 100%;
+			width: 100%;
+			object-fit: contain;
 		}
 	}
 	.right {
-		flex: 1;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-
-		@include mobile {
-			width: 100vh;
-		}
+		margin-top: 6rem;
 
 		h2 {
 			font-size: 1.9rem;
+			overflow: hidden;
+		}
+		.social-links {
+			width: 100%;
+			margin-top: .3rem;
+			display: flex;
+			overflow: hidden;
+			justify-content: space-around;
+			a {
+				overflow: hidden;
+				color: lighten($color: crimson, $amount: 20%);
+				&:hover {
+					color: darken($color: crimson, $amount: 10%);
+				}
+			}
 		}
 		form {
-			width: 70%;
-			height: 70%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -40,6 +54,7 @@
 				width: 29rem;
 				height: 1.9rem;
 				font-size: 0.9rem;
+				margin-top: 1rem;
 
 				@include mobile {
 					width: 12.5rem;
@@ -56,6 +71,7 @@
 				width: 29rem;
 				height: 22.5rem;
 				font-size: 0.9rem;
+				margin-top: 2rem;
 				@include mobile {
 					width: 12.5rem;
 					height: 6.2rem;
@@ -67,6 +83,7 @@
 				}
 			}
 			button {
+				margin-top: 1rem;
 				width: 14.4rem;
 				height: 2.9rem;
 				color: white;
@@ -87,6 +104,8 @@
 				}
 			}
 			span {
+				margin-top: 2rem;
+				overflow: hidden;
 				color: green;
 			}
 		}
