added correct links to sources.

--- a/src/components/Sass/_works.scss
+++ b/src/components/Sass/_works.scss
@@ -60,7 +60,7 @@
 
 				.left {
 					flex: 4;
-					height: 80%;
+					height: 90%;
 					display: flex;
 					align-items: center;
 					justify-content: center;
@@ -108,11 +108,18 @@
 								display: none;
 							}
 						}
-						span {
-							font-size: 0.7rem;
-							font-weight: 700;
-							text-decoration: underline;
-							cursor: pointer;
+
+						.site-links {
+							display: flex;
+							flex-direction: column;
+							a {
+								span {
+									font-size: 0.7rem;
+									font-weight: 700;
+									text-decoration: underline;
+									cursor: pointer;
+								}
+							}
 						}
 					}
 				}
