added page for detailed description of the projects and did some hotfixing.

--- a/src/components/Sass/_portfolio.scss
+++ b/src/components/Sass/_portfolio.scss
@@ -50,6 +50,11 @@
 			@include mobile {
 				width: 8.8rem;
 				height: 4.2rem;
+				background-color: $mainColor;
+				img {
+					opacity: 0.3;
+					z-index: 0;
+				}
 			}
 			h3 {
 				position: absolute;
