--- a/src/components/Sass/global.scss
+++ b/src/components/Sass/global.scss
@@ -1,5 +1,6 @@
 //global styles
 @import "./variables";
+@import "./buttons";
 
 //component styles
 @import "./root";
@@ -12,3 +13,4 @@
 @import "./root";
 @import "./portfoliolist";
 @import "./works";
+@import "./description";
