--- a/src/components/Sass/_works.scss
+++ b/src/components/Sass/_works.scss
@@ -32,7 +32,7 @@
 		transition: all 1s ease-out;
 
 		@include mobile {
-			height: 100vh;
+			height: inherit;
 			flex-direction: column;
 			justify-content: center;
 		}
