--- a/src/components/Sass/_portfolio.scss
+++ b/src/components/Sass/_portfolio.scss
@@ -1,84 +1,84 @@
 .portfolio {
-	background-color: white;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-	h1 {
-		font-size: 3rem;
+  h2 {
+    font-size: 3rem;
 
-		@include mobile {
-			font-size: 1.4rem;
-		}
-	}
-	ul {
-		margin: 10px;
-		padding: 0px;
-		list-style: none;
-		display: flex;
-		@include mobile {
-			font-size: 1.4rem;
-			flex-wrap: wrap;
-			justify-content: center;
-			margin: 10px 0;
-		}
-	}
-	.container {
-		width: 70%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-wrap: wrap;
+    @include mobile {
+      font-size: 1.4rem;
+    }
+  }
+  ul {
+    margin: 10px;
+    padding: 0px;
+    list-style: none;
+    display: flex;
+    @include mobile {
+      font-size: 1.4rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 10px 0;
+    }
+  }
+  .container {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 
-		@include mobile {
-			flex-direction: column;
-			width: 100%;
+    @include mobile {
+      flex-direction: column;
+      width: 100%;
 
-			img {
-				width: 100%;
-			}
-		}
+      img {
+        width: 100%;
+      }
+    }
 
-		.item {
-			width: 15.7rem;
-			height: 9.8rem;
-			border-radius: 10%;
-			border: 1px solid rgb(231, 224, 224);
-			margin: 0.6rem 1.6rem;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			color: white;
-			position: relative;
-			transition: all .7s ease;
-			cursor: pointer;
-			@include mobile {
-				width: 90%;
-				height: 7.2rem;
-				margin-top: 3rem;
-				background-color: $mainColor;
-				img {
-					opacity: 0.3;
-					z-index: 0;
-				}
-			}
-			h3 {
-				position: absolute;
-				font-size: 1.5rem;
-			}
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				z-index: 1;
-			}
-			&:hover {
-				background-color: $mainColor;
-				img {
-					opacity: 0.3;
-					z-index: 0;
-				}
-			}
-		}
-	}
+    .item {
+      width: 15.7rem;
+      height: 9.8rem;
+      border-radius: 10%;
+      border: 1px solid rgb(231, 224, 224);
+      margin: 0.6rem 1.6rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      position: relative;
+      transition: all 0.7s ease;
+      cursor: pointer;
+      @include mobile {
+        width: 90%;
+        height: 7.2rem;
+        margin-top: 3rem;
+        background-color: $mainColor;
+        img {
+          opacity: 0.3;
+          z-index: 0;
+        }
+      }
+      h3 {
+        position: absolute;
+        font-size: 1.5rem;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+      }
+      &:hover {
+        background-color: $mainColor;
+        img {
+          opacity: 0.3;
+          z-index: 0;
+        }
+      }
+    }
+  }
 }
