--- a/src/components/Sass/_portfolio.scss
+++ b/src/components/Sass/_portfolio.scss
@@ -6,21 +6,21 @@
 
   h2 {
     font-size: 3rem;
+    overflow: hidden;
 
     @include mobile {
       font-size: 1.4rem;
     }
   }
   ul {
-    margin: 10px;
+    margin: 5px;
     padding: 0px;
     list-style: none;
     display: flex;
     @include mobile {
       font-size: 1.4rem;
-      flex-wrap: wrap;
       justify-content: center;
-      margin: 10px 0;
+      margin: 5px 0;
     }
   }
   .container {
@@ -33,6 +33,7 @@
     @include mobile {
       flex-direction: column;
       width: 100%;
+      flex-wrap: wrap;
 
       img {
         width: 100%;
@@ -53,8 +54,8 @@
       transition: all 0.7s ease;
       cursor: pointer;
       @include mobile {
-        width: 90%;
-        height: 7.2rem;
+        width: 80%;
+        height: 3.2rem;
         margin-top: 3rem;
         background-color: $mainColor;
         img {
@@ -65,11 +66,12 @@
       h3 {
         position: absolute;
         font-size: 1.5rem;
+        overflow: hidden;
       }
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: fit;
         z-index: 1;
       }
       &:hover {
